--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,11 @@
 }
 
 body {
-  background-color: #a3c1ad;
+  background-color: white;
+  margin:0;
 }
 
 header {
-  color:yellowgreen;
+  color: rgb(185, 7, 7);
+  background-color: #c1403d;
 }
